kubernetes/apps/database/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
spec:
  ingressClassName: internal
  annotations:
    external-dns.alpha.kubernetes.io/hostname: internal.${SECRET_DOMAIN}
  rules:
    - host: emqx.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
